--- a/image-gallery-style.css
+++ b/image-gallery-style.css
@@ -53,7 +53,12 @@ h1 {
     }
   }
 
-
+  @media screen and (max-width: 942px) {
+    .column {
+      flex: 45%;
+      max-width: 100%;
+    }
+  }
 
 /* styling for full containers */
 .container {
@@ -65,6 +70,7 @@ h1 {
     display: block;
     width: 100%;
     height: auto;
+    object-fit: cover;
   }
   
   .overlay {
@@ -87,7 +93,7 @@ h1 {
   
   .text {
     color: white;
-    font-size: 20px;
+    font-size: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -114,6 +120,6 @@ h1 {
     animation-duration: 3s;
   }
 
-  
+
 
   
